--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -100,7 +100,8 @@
 .fab.fa-pull-right {
   margin-left: .3em; }
 
-.fa-spin {
+.fa-spin ::before {
+  display: inline-block;
   -webkit-animation: fa-spin 2s infinite linear;
           animation: fa-spin 2s infinite linear; }
 
@@ -4591,7 +4592,7 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-brands-400.eot");
   src: url("../webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
-.fab {
+.fab  {
   font-family: 'Font Awesome 5 Brands';
   font-weight: 400; }
 @font-face {
@@ -4602,7 +4603,7 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-regular-400.eot");
   src: url("../webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.woff") format("woff"), url("../webfonts/fa-regular-400.ttf") format("truetype"), url("../webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
-.far {
+.far  {
   font-family: 'Font Awesome 5 Free';
   font-weight: 400; }
 @font-face {
@@ -4613,7 +4614,7 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-solid-900.eot");
   src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
-.fa,
-.fas {
+.fa ,
+.fas  {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
